feat: Add foto to footer

--- a/src/components/App/Main/Advertisement/Advertisement.css
+++ b/src/components/App/Main/Advertisement/Advertisement.css
@@ -1,6 +1,6 @@
 .advertisement {
   padding: 158px 0;
-  background: url(../../../../images/advertisement.png) center/cover no-repeat;
+  background: url(../../../../images/angel-skorbi.jpg) center/cover no-repeat;
 }
 
 .advertisement__content {
