--- a/src/components/App/Main/Conditions/Conditions.css
+++ b/src/components/App/Main/Conditions/Conditions.css
@@ -1,6 +1,6 @@
 .conditions {
   padding: 78px 0 48px;
-  background: url(../../../../images/whiteangle.png) center/cover no-repeat;
+  background: url(../../../../images/angel-heavenly.jpg) center/cover no-repeat;
 }
 
 .conditions__content {
