--- a/src/components/App/Main/Faq/Faq.css
+++ b/src/components/App/Main/Faq/Faq.css
@@ -26,7 +26,7 @@
 
 .faq__content {
   padding: 60px 0 60px;
-  background: url(../../../../images/rectangle55.png) center/cover no-repeat;
+  background: url(../../../../images/angel-faq.jpg) center/cover no-repeat;
 }
 
 .faq__content-items {
