feat: Add arrow-up

--- a/src/components/App/ScrollUp/ScrollUp.css
+++ b/src/components/App/ScrollUp/ScrollUp.css
@@ -4,14 +4,12 @@
   display: block;
   opacity: 0;
   text-decoration: none;
-  transform: rotate(180deg);
   bottom: 100px;
   right: 30px;
   width: 36px;
   height: 36px;
-  background: #fff url(../../../images/select-arrow.png) center/contain no-repeat;
+  background: rgba(255,255,255,.5) url(../../../images/svg/arrow.svg) center/262% no-repeat;
   border-radius: 50%;
-  padding: 8px;
   transition: all 1s;
 }
 
