--- a/src/components/App/Main/Services/Services.css
+++ b/src/components/App/Main/Services/Services.css
@@ -32,6 +32,7 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  justify-content: space-evenly;
   gap: 30px;
 }
 
@@ -45,8 +46,10 @@
 
 .services__image {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  max-width: 350px;
+  height: 100%;
+  max-height: 233px;
   object-fit: cover;
   object-position: 50% 50%;
   margin: 0 auto 17px;
