--- a/src/components/App/Main/Services/Services.css
+++ b/src/components/App/Main/Services/Services.css
@@ -31,7 +31,7 @@
   padding: 0 15px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 480px));
   justify-content: space-evenly;
   gap: 30px;
 }
@@ -132,7 +132,7 @@
 @media (max-width: 768px) {
   .services__catalog {
     max-width: 510px;
-    grid-template-columns: repeat(1, 1fr);
+    /* grid-template-columns: repeat(1, 1fr); */
   }
 
   .services__card-title {
