feat: Add max-content to grid

--- a/src/components/App/Main/Services/Services.css
+++ b/src/components/App/Main/Services/Services.css
@@ -31,7 +31,7 @@
   padding: 0 15px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 480px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
   justify-content: space-evenly;
   gap: 30px;
 }
