--- a/src/components/App/Main/Topnav/Topnav.css
+++ b/src/components/App/Main/Topnav/Topnav.css
@@ -7,9 +7,8 @@
 }
 
 .topnav_on_shadow {
-  box-shadow: 0px 5px 10px 0px rgb(0,0,0,.5);;
+  box-shadow: 0px 5px 10px 0px rgb(0, 0, 0, 0.5);
 }
-
 
 .topnav__content {
   box-sizing: border-box;
@@ -58,11 +57,21 @@
   line-height: 14px;
   color: #000;
   text-decoration: none;
+  margin-top: 5px;
+  padding-left: 40px;
   transition: all 0.15s ease-in-out;
 }
 
 .topnav__tel:hover {
   color: #ab0c00;
+}
+
+.topnav__tel_mts {
+  background: url(../../../../images/mts-logo.png) left/contain no-repeat;
+}
+
+.topnav__tel_a1 {
+  background: url(../../../../images/svg/a1-logo.svg) left/contain no-repeat;
 }
 
 .topnav__burger {
