--- a/src/components/App/Main/Topnav/Topnav.css
+++ b/src/components/App/Main/Topnav/Topnav.css
@@ -58,7 +58,7 @@
   color: #000;
   text-decoration: none;
   margin-top: 5px;
-  padding-left: 40px;
+  padding-left: 20px;
   transition: all 0.15s ease-in-out;
 }
 
@@ -219,5 +219,10 @@
 @media (max-width: 575px) {
   .topnav__content {
     width: 100%;
+  }
+
+
+  .topnav__email_hidden {
+    display: none;
   }
 }
