--- a/src/components/App/Main/Reviews/Reviews.css
+++ b/src/components/App/Main/Reviews/Reviews.css
@@ -1,3 +1,7 @@
+.reviews {
+  padding: 100px 0 70px;
+}
+
 .reviews__title {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -8,3 +12,74 @@
   margin: 0 0 76px;
   text-align: center;
 }
+
+.reviews__list {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  max-width: 1140px;
+}
+
+.reviews__content {
+  display: flex;
+  flex-direction: column;
+  max-width: 360px;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.reviews__avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 0 0 40px;
+}
+
+.reviews__cardtitle {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.35;
+  color: #000;
+  text-align: center;
+  margin: 0 0 8px;
+  font-size: 14px;
+  line-height: 1.35;
+}
+
+.reviews__subtitle {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.55;
+  color: #666;
+  text-align: center;
+  margin: 0 0 40px;
+}
+
+.reviews__text {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.55;
+  color: #000;
+  text-align: center;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .reviews__list {
+    max-width: 510px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .reviews__content {
+    margin-bottom: 40px;
+  }
+}
+
