--- a/src/components/App/Main/Reviews/Reviews.css
+++ b/src/components/App/Main/Reviews/Reviews.css
@@ -17,7 +17,9 @@
   margin: 0 auto;
   padding: 0;
   list-style: none;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
   max-width: 1140px;
 }
 
@@ -25,8 +27,9 @@
   display: flex;
   flex-direction: column;
   max-width: 360px;
+  margin: 0 auto;
   align-items: center;
-  padding: 0 10px;
+  padding: 10px;
 }
 
 .reviews__avatar {
@@ -74,8 +77,7 @@
 @media (max-width: 768px) {
   .reviews__list {
     max-width: 510px;
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .reviews__content {
