--- a/src/components/App/Main/Calculator/Calculator.css
+++ b/src/components/App/Main/Calculator/Calculator.css
@@ -1,8 +1,30 @@
 .calculator {
-  max-width: 850px;
-  margin: auto;
+  padding: 100px 0 0;
+  max-width: 1140px;
+  margin: 0 auto;
 }
-.info-box {
+
+.calculator__title {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 43px;
+  color: #000;
+  padding: 0 15px;
+  margin: 0 0 68px;
+  text-align: center;
+}
+
+.calculator__content {
+  box-sizing: border-box;
+  position: relative;
+  min-width: 320px;
+  background-color: #fff;
+  padding: 0 15px;
+  margin: 0 0 100px;
+}
+.calculator__desc {
   display: none;
   position: fixed;
   z-index: 9;
