--- a/src/components/App/Main/Calculator/Calculator.css
+++ b/src/components/App/Main/Calculator/Calculator.css
@@ -34,7 +34,7 @@
 .calculator__fieldset {
   width: 100%;
   border: none;
-  margin: 0;
+  margin: 0 0 30px;
   padding: 0;
 }
 
@@ -49,9 +49,10 @@
 }
 
 .calculator__field {
-  display: inline-block;
+  display: grid;
+  grid-template-columns: 1fr 20px;
   position: relative;
-  width: 90%;
+  width: 100%;
 }
 
 .calculator__count-button {
@@ -96,6 +97,17 @@
   text-align: center;
   height: 32px;
   line-height: 32px;
+}
+
+.calculator__info {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 28px;
+  color: rgba(0,0,0,.5);
+  text-align: center;
+  cursor: pointer;
 }
 /* .calculator__desc {
   display: none;
