--- a/src/components/App/Main/Calculator/Calculator.css
+++ b/src/components/App/Main/Calculator/Calculator.css
@@ -1,5 +1,5 @@
 .calculator {
-  padding: 100px 0 0;
+  padding: 0 0 100px;
   max-width: 1140px;
   margin: 0 auto;
 }
@@ -22,7 +22,6 @@
   min-width: 320px;
   background-color: #fff;
   padding: 0 15px;
-  margin: 0 0 100px;
 }
 
 .calculator__form {
@@ -109,18 +108,29 @@
   text-align: center;
   cursor: pointer;
 }
-/* .calculator__desc {
-  display: none;
-  position: fixed;
-  z-index: 9;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.9);
-  overflow: auto;
-} */
+
+.calculator__buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.calculator__submit-button {
+  min-width: 120px;
+  height: 38px;
+  background-color: rgba(171, 12, 0, 1);
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  color: #fff;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 0;
+  overflow: hidden;
+}
 
 .info-box img {
   display: block;
