--- a/src/components/App/Main/Faq/Faq.css
+++ b/src/components/App/Main/Faq/Faq.css
@@ -86,7 +86,7 @@
 
 @media (max-width: 768px) {
   .faq__content {
-    background: #8B8B8B;
+    background: #f7f8fb;
   }
 
   .faq__content-items {
