--- a/src/components/App/Main/Conditions/Conditions.css
+++ b/src/components/App/Main/Conditions/Conditions.css
@@ -1,6 +1,6 @@
 .conditions {
-  padding: 78px 0 48px;
-  background: url(../../../../images/angel-heavenly.jpg) center/cover no-repeat;
+  padding: 70px 0 50px;
+  background: #fff center/cover no-repeat;
 }
 
 .conditions__content {
@@ -15,7 +15,7 @@
   font-weight: 600;
   font-size: 45px;
   line-height: 51px;
-  color: #fff;
+  color: #534949;
   max-width: 490px;
   text-transform: uppercase;
   margin: 0 0 8px;
@@ -27,7 +27,7 @@
   font-weight: 300;
   font-size: 30px;
   line-height: 34px;
-  color: #fff;
+  color: #534949;
   max-width: 490px;
   margin: 0 0 35px;
 }
@@ -52,7 +52,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
-  color: #fff;
+  color: #534949;
   margin: 0 0 5px;
 }
 
@@ -63,7 +63,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 1.25;
-  color: #fff;
+  color: #534949;
   background-color: #AB0C00;
   min-width: 165px;
   margin: 0;
@@ -109,11 +109,6 @@
 }
 
 @media (max-width: 768px) {
-  .conditions {
-    padding: 78px 0 48px;
-    background: black;
-  }
-
   .conditions__content {
     max-width: 510px;
   }
