feat: Add black advertisement

--- a/src/components/App/Main/Advertisement/Advertisement.css
+++ b/src/components/App/Main/Advertisement/Advertisement.css
@@ -109,6 +109,7 @@
 @media (max-width: 768px) {
   .advertisement {
     padding: 50px 0 100px;
+    background: #000;
   }
 
   .advertisement__content {
