--- a/src/components/App/Main/Calculator/Calculator.css
+++ b/src/components/App/Main/Calculator/Calculator.css
@@ -120,7 +120,7 @@
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 12px;
   line-height: 18px;
   color: #fff;
   border: none;
@@ -130,6 +130,29 @@
   margin: 0;
   overflow: hidden;
 }
+
+.result__content {
+  width: 270px;
+  margin: 0 auto;
+}
+
+.result__title {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 32px;
+  color: #000;
+  padding: 0 15px;
+  margin: 34px 0 32px;
+  text-align: center;
+}
+
+
+
+
+
+
 
 .info-box img {
   display: block;
@@ -240,9 +263,6 @@
 }
 .conditions {
   color: #666;
-}
-.result {
-  display: none;
 }
 .result__button input {
   padding: 10px;
