--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../components/App/Main/About/About.css);
 @import url(../components/App/Main/Reviews/Reviews.css);
 @import url(../components/App/Main/Calculator/Calculator.css);
+@import url(../components/App/Main/Calculator/Result/Result.css);
 @import url(../components/App/Main/Conditions/Conditions.css);
 /* footer */
 @import url(../components/App/Footer/Footer.css);
