--- a/src/components/App/Main/Calculator/Result/Result.css
+++ b/src/components/App/Main/Calculator/Result/Result.css
@@ -3,8 +3,16 @@
   margin: 0 auto;
 }
 
+.result__material {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
 .result__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -15,7 +23,54 @@
   text-align: center;
 }
 
+.result__item {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.05;
+  color: rgb(96, 105, 129);
+  margin: 0 0 8px;
+}
 
+.result__count {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.05;
+  color: #000;
+  margin: 0 0 18px;
+}
+
+.result__button {
+    min-width: 120px;
+    height: 38px;
+    background-color: rgba(171, 12, 0, 1);
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #fff;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    transition: 0.2s;
+    margin: 0;
+    overflow: hidden;
+}
+
+.result__condition {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.05;
+  color: rgb(96, 105, 129);
+  text-align: center;
+  margin: 30px 0 0;
+}
 
 
 
