feat: Add result__material_hidden

--- a/src/components/App/Main/Calculator/Result/Result.css
+++ b/src/components/App/Main/Calculator/Result/Result.css
@@ -15,6 +15,10 @@
   justify-content: space-between;
 }
 
+.result__material_hidden {
+  display: none;
+}
+
 .result__title {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
