--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,4 +3,5 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fff;
+  scroll-behavior: smooth;
 }
