--- a/src/components/App/Main/Calculator/Result/Result.css
+++ b/src/components/App/Main/Calculator/Result/Result.css
@@ -80,125 +80,32 @@
   margin: 30px 0 0;
 }
 
-
-
-
-
-
-
-.info-box img {
-  display: block;
-  margin: auto;
-  width: 80%;
-  -webkit-animation-name: zoom;
-  animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-}
-.info-box__wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.result__feedback-buttons {
+  margin: 0;
+  padding: 0;
+  list-style: none;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.info-active {
-  cursor: pointer;
-  margin-left: 10px;
-  font-size: 10px;
-}
-.close {
-  z-index: 2;
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
-@-webkit-keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  }
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  }
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-.require {
-  color: red;
-  display: inline-block;
-  margin-right: 10px;
-}
-.width-field {
-  width: 200px;
-  height: 32px;
-  line-height: 32px;
-  text-align: center;
-}
-
-.calc {
-  padding: 0 20px;
-  margin-bottom: 30px;
-}
-
-.needcurb {
-  margin-left: 10px;
-}
-.calc__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
-.calc__button input,
-.calc__button button {
-  padding: 10px;
-  background-color: lightblue;
+.result__feedback {
+  width: 50px;
+  height: 50px;
   cursor: pointer;
 }
-.calc__button button a {
-  text-decoration: none;
-  color: inherit;
+
+.result__feedback:hover {
+  opacity: 0.8;
 }
-.conditions {
-  color: #666;
+
+.result__feedback_type_mts {
+  background: url(../../../../../images/mts-logo.png) left/contain no-repeat;
 }
-.result__button input {
-  padding: 10px;
-  background-color: red;
-  color: white;
-  cursor: pointer;
+
+.result__feedback_type_a1 {
+  background: url(../../../../../images/svg/a1-logo.svg) left/contain no-repeat;
+}
+
+.result__feedback_type_whatsapp {
+  background: url(../../../../../images/whatsapp-logo.png) left/contain no-repeat;
 }
