--- a/src/components/App/Main/Topnav/Topnav.css
+++ b/src/components/App/Main/Topnav/Topnav.css
@@ -135,7 +135,6 @@
 }
 
 .topnav__dropdown-content {
-  display: none;
   margin: 0;
   padding: 10px;
   list-style: none;
@@ -143,6 +142,11 @@
   top: 54px;
   min-width: 100px;
   background-color: #e1e1e1;
+  box-shadow: 0px 5px 10px 0px rgb(0, 0, 0, 0.5);
+}
+
+.topnav__dropdown-content_hidden {
+  display: none;
 }
 
 .burger-menu {
