--- a/src/components/App/Main/Topnav/Topnav.css
+++ b/src/components/App/Main/Topnav/Topnav.css
@@ -58,7 +58,7 @@
   color: #000;
   text-decoration: none;
   margin-top: 5px;
-  padding-left: 20px;
+  padding-left: 18px;
   transition: all 0.15s ease-in-out;
 }
 
@@ -238,6 +238,12 @@
     width: 100%;
     max-height: 500px;
     text-align: end;
+  }
+
+  .topnav__dropdown-content {
+    position: relative;
+    box-shadow: none;
+    top: 0;
   }
 }
 
