--- a/src/components/App/Footer/Footer.css
+++ b/src/components/App/Footer/Footer.css
@@ -104,9 +104,13 @@
   color: #fff;
 }
 
+.footer__links-container {
+  display: flex;
+}
+
 .footer__links {
   margin: 0;
-  padding: 0;
+  padding: 0 50px 0 0;
   list-style: none;
 }
 
@@ -114,7 +118,7 @@
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 28px;
   text-decoration: none;
   transition: all 0.15s ease-in-out;
