--- a/src/components/App/Main/Advertisement/Advertisement.css
+++ b/src/components/App/Main/Advertisement/Advertisement.css
@@ -1,7 +1,6 @@
 .advertisement {
   padding: 158px 0;
-  background:
-    url(../../../../images/angel-heavenly.jpg) center/cover no-repeat;
+  background: url(../../../../images/angel-heavenly.jpg) center/cover no-repeat;
   /* background-image: ;; */
 }
 
