--- a/src/components/App/Swiper/Swiper.css
+++ b/src/components/App/Swiper/Swiper.css
@@ -16,6 +16,7 @@
   object-fit: cover;
 }
 
-.swiper-button-prev, .swiper-button-next {
+.swiper-button-prev,
+.swiper-button-next {
   color: white;
 }
