--- a/src/components/App/Clients/Clients.css
+++ b/src/components/App/Clients/Clients.css
@@ -29,13 +29,13 @@
 
 .clients__logout {
   box-sizing: border-box;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.25;
   color: #fff;
-  background-color: #AB0C00;
+  background-color: #ab0c00;
   min-width: 235px;
   margin: 0;
   padding: 8px 0;
@@ -43,11 +43,11 @@
   text-decoration: none;
   white-space: nowrap;
   border: 1px solid transparent;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .clients__logout:hover {
-  background-color: #EC1000;
+  background-color: #ec1000;
   color: #fff;
 }
 
@@ -71,7 +71,7 @@
 
 @media (max-width: 768px) {
   .clients__content {
-    background: #8B8B8B;
+    background: #8b8b8b;
   }
 
   .clients__items {
