--- a/src/components/App/HandleFeedbackPopup/HandleFeedbackPopup.css
+++ b/src/components/App/HandleFeedbackPopup/HandleFeedbackPopup.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0, 0, 0, 0.8);
   visibility: hidden;
   opacity: 0;
   justify-content: center;
@@ -56,7 +56,7 @@
 
 .form__title {
   margin: 0 0 30px;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -80,7 +80,7 @@
   width: 100%;
   padding: 15px;
   border: none;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -95,11 +95,11 @@
 }
 
 .form__input_type_status {
- appearance: none;
- background-image: url(../../../images/select-arrow.png);
- background-position: calc(100% - 15px) center;
- background-repeat: no-repeat;
- background-size: 15px;
+  appearance: none;
+  background-image: url(../../../images/select-arrow.png);
+  background-position: calc(100% - 15px) center;
+  background-repeat: no-repeat;
+  background-size: 15px;
 }
 
 .form__input_type_description {
@@ -115,13 +115,13 @@
   box-sizing: border-box;
   width: 100%;
   height: 12px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight:400;
+  font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: #f00;
-  transition: .2s;
+  transition: 0.2s;
   opacity: 1;
   position: relative;
 }
@@ -138,7 +138,7 @@
   height: 58px;
   background-color: rgba(171, 12, 0, 1);
   border-radius: 30px;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -154,8 +154,8 @@
 
 .form__submit_disabled {
   background-color: #fff;
-  border: 1px solid #C4C4C4;
-  color: #C4C4C4;
+  border: 1px solid #c4c4c4;
+  color: #c4c4c4;
 }
 
 .form__submit-text {
@@ -165,7 +165,7 @@
   height: 100%;
   display: flex;
   justify-content: space-between;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .form__submit-text_hover:hover {
@@ -195,8 +195,8 @@
 }
 
 .form__checkbox:checked + .form__checkbox-item {
-background-color: rgba(171, 12, 0, 1);
-color: #fff;
+  background-color: rgba(171, 12, 0, 1);
+  color: #fff;
 }
 
 .form__checkbox-item {
@@ -214,7 +214,7 @@ color: #fff;
 
 .form__conditions {
   margin: 0 0 0 24px;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -223,14 +223,14 @@ color: #fff;
 }
 
 .form__conditions-link {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
   color: #2251aa;
   text-decoration: none;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .form__conditions-link:hover {
