--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -17,45 +17,44 @@
   width: 125px;
   height: 83px;
   margin: 0 auto;
-  background: url(../../../images/svg/logo.svg)
-    center/contain no-repeat;
+  background: url(../../../images/svg/logo.svg) center/contain no-repeat;
 }
 
 .header__logo-link {
   text-decoration: none;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
   color: #000;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .header__logo-link:hover {
-  color: #AB0C00;
+  color: #ab0c00;
 }
 
 .header__feedback {
   box-sizing: border-box;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.25;
   color: #fff;
-  background-color: #AB0C00;
+  background-color: #ab0c00;
   min-width: 158px;
   padding: 8px 0;
   border-radius: 100px;
   text-decoration: none;
   white-space: nowrap;
   border: 1px solid transparent;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .header__feedback:hover {
-  background-color: #EC1000;
+  background-color: #ec1000;
   color: #fff;
 }
 
@@ -77,7 +76,7 @@
 }
 
 .contacts__item_work-time {
-display: block;
+  display: block;
 }
 
 .contacts__item_email {
@@ -85,7 +84,7 @@ display: block;
 }
 
 .contacts__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -94,7 +93,7 @@ display: block;
 }
 
 .contacts__hours {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -103,22 +102,22 @@ display: block;
 }
 
 .contacts__email {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
   color: #000;
   text-decoration: none;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .contacts__email:hover {
-  color: #AB0C00;
+  color: #ab0c00;
 }
 
 .contacts__tel {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -127,15 +126,15 @@ display: block;
   margin-top: 5px;
   padding-left: 32px;
   text-decoration: none;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .contacts__tel:hover {
-  color: #AB0C00;
+  color: #ab0c00;
 }
 
 .contacts__tel_mts {
-background: url(../../../images/mts-logo.png) left/contain no-repeat;
+  background: url(../../../images/mts-logo.png) left/contain no-repeat;
 }
 
 .contacts__tel_a1 {
