--- a/src/components/App/ImagePopup/ImagePopup.css
+++ b/src/components/App/ImagePopup/ImagePopup.css
@@ -23,5 +23,5 @@
   top: 36px;
   right: 36px;
   color: #fff;
-  box-shadow:  0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
