--- a/src/components/App/Login/Login.css
+++ b/src/components/App/Login/Login.css
@@ -11,7 +11,8 @@
   text-decoration: none;
   width: 38px;
   height: 38px;
-  background: url(https://0622203.demo1.siteimperium.com/images/design/group.png) center/contain no-repeat;
+  background: url(https://0622203.demo1.siteimperium.com/images/design/group.png)
+    center/contain no-repeat;
   margin-bottom: 40px;
 }
 
