--- a/src/components/App/Main/Calculator/Calculator.css
+++ b/src/components/App/Main/Calculator/Calculator.css
@@ -5,7 +5,7 @@
 }
 
 .calculator__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
@@ -39,7 +39,7 @@
 
 .calculator__label {
   display: block;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -77,7 +77,7 @@
 .calculator__input {
   box-sizing: border-box;
   display: block;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -98,19 +98,19 @@
 }
 
 .calculator__info {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 28px;
-  color: rgba(0,0,0,.5);
+  color: rgba(0, 0, 0, 0.5);
   text-align: right;
   cursor: pointer;
 }
 
 .calculator__checkbox {
   display: inline-block;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -128,7 +128,7 @@
   min-width: 120px;
   height: 38px;
   background-color: rgba(171, 12, 0, 1);
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
