--- a/src/components/App/Main/Competence/Competence.css
+++ b/src/components/App/Main/Competence/Competence.css
@@ -31,7 +31,7 @@
 }
 
 .competence__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -41,7 +41,7 @@
 }
 
 .competence__text {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
