--- a/src/components/App/Main/Conditions/Conditions.css
+++ b/src/components/App/Main/Conditions/Conditions.css
@@ -10,7 +10,7 @@
 }
 
 .conditions__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 45px;
@@ -22,7 +22,7 @@
 }
 
 .conditions__subtitle {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 30px;
@@ -47,7 +47,7 @@
 }
 
 .conditions__list-item {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -58,23 +58,23 @@
 
 .conditions__feedback-button {
   box-sizing: border-box;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.25;
   color: #534949;
-  background-color: #AB0C00;
+  background-color: #ab0c00;
   min-width: 165px;
   margin: 0;
   padding: 10px 0;
   border-radius: 100px;
   border: 1px solid transparent;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .conditions__feedback-button:hover {
-  background-color: #EC1000;
+  background-color: #ec1000;
 }
 
 @media (max-width: 1200px) {
