--- a/src/components/App/Main/Faq/FaqQuestion/FaqQuestion.css
+++ b/src/components/App/Main/Faq/FaqQuestion/FaqQuestion.css
@@ -25,7 +25,7 @@
 }
 
 .faq__question-text_active {
-  color: #AB0C00;
+  color: #ab0c00;
 }
 
 .faq__answer-button {
@@ -45,7 +45,7 @@
 
 .faq__answer-button_active {
   transform: rotate(270deg);
-  color: #AB0C00;
+  color: #ab0c00;
 }
 
 .faq__answer {
