--- a/src/components/App/Main/Portfolio/Portfolio.css
+++ b/src/components/App/Main/Portfolio/Portfolio.css
@@ -3,7 +3,7 @@
 }
 
 .portfolio__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
