--- a/src/components/App/Main/Reviews/Reviews.css
+++ b/src/components/App/Main/Reviews/Reviews.css
@@ -4,7 +4,7 @@
 }
 
 .reviews__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
@@ -85,4 +85,3 @@
     margin-bottom: 40px;
   }
 }
-
