--- a/src/components/App/Main/Services/Services.css
+++ b/src/components/App/Main/Services/Services.css
@@ -4,7 +4,7 @@
 }
 
 .services__title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
@@ -15,7 +15,7 @@
 }
 
 .services__subtitle {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -59,7 +59,7 @@
 }
 
 .services__card-title {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -70,7 +70,7 @@
 }
 
 .services__desc {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -82,19 +82,19 @@
 }
 
 .services__price-text {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 28px;
-  color: #FF9C22;
+  color: #ff9c22;
   margin: 0 0 24px;
 }
 
 .services__feedback {
   display: block;
   box-sizing: border-box;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -108,7 +108,7 @@
   text-decoration: none;
   white-space: nowrap;
   border: 1px solid #534949;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .services__feedback:hover {
