--- a/src/components/App/Topnav/Topnav.css
+++ b/src/components/App/Topnav/Topnav.css
@@ -67,11 +67,11 @@
 }
 
 .topnav__tel_mts {
-  background: url(../../../../images/mts-logo.png) left/contain no-repeat;
+  background: url(../../../images/mts-logo.png) left/contain no-repeat;
 }
 
 .topnav__tel_a1 {
-  background: url(../../../../images/svg/a1-logo.svg) left/contain no-repeat;
+  background: url(../../../images/svg/a1-logo.svg) left/contain no-repeat;
 }
 
 .topnav__burger {
@@ -127,7 +127,7 @@
   color: #000;
   text-decoration: none;
   transition: all 0.15s ease-in-out;
-  background: url(../../../../images/select-arrow.png) right/20px no-repeat;
+  background: url(../../../images/select-arrow.png) right/20px no-repeat;
 }
 
 .topnav__dropdown-button:hover {
