--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,9 +4,10 @@
 
 /* header */
 @import url(../components/App/Header/Header.css);
+/*topnav*/
+@import url(../components/App/Topnav/Topnav.css);
 /* main */
 @import url(../components/App/Main/Main.css);
-@import url(../components/App/Main/Topnav/Topnav.css);
 @import url(../components/App/Main/Advertisement/Advertisement.css);
 @import url(../components/App/Main/Competence/Competence.css);
 @import url(../components/App/Main/Services/Services.css);
